--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,8 @@ code {
   max-width: 100vw;
   min-height: 100vh;
   align-items: center;
-  justify-content: center;
+  padding-top: 5em;
+  /* justify-content: center; */
   flex-direction: column;
 }
 
